# os_lab_5_12

./: CMakeLists.txt  README.md  client.cpp  client2.cpp  server.cpp  shared.cpp  shared.h
